# back-ledley

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
src/: .gitignore
src/config/: .gitignore  settings.py  urls.py
src/login/: urls.py
src/login/auth_tools/: decorators.py
src/login/serializers/: login_serializer.py
src/login/views/: login_view.py
src/plan/migrations/: 0001_initial.py
src/plan/models/: __init__.py  plan.py
src/user/: admin.py
src/user/migrations/: 0001_initial.py  0002_populate_users.py
src/user/models/: __init__.py  patient.py  professional.py  user.py
src/user/views/: patient_view.py
user/models/: user.py
