[project]
name = "back-ledley"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

